fix(resource-list): wrapped checkbox, set a fix width for the elements within the mat-list-item

--- a/apps/dsp-app/src/app/workspace/results/list-view/resource-list/resource-list.component.scss
+++ b/apps/dsp-app/src/app/workspace/results/list-view/resource-list/resource-list.component.scss
@@ -26,9 +26,9 @@
 
 
 .res-list-item-container {
+  width: 95%;
   display: flex;
   flex-grow: 1; /* grow to fill remaining space */
-  align-items: center;
   cursor: pointer;
 }
 
@@ -40,6 +40,8 @@
 
 
 .res-checkbox {
+  align-items: flex-end;
+  width: 5%;
   margin-left: auto;
   cursor: default;
 }
